--- a/index.html
+++ b/index.html
@@ -417,11 +417,12 @@
             border: 1px solid var(--card-border-color);
             border-radius: 8px;
             padding: 15px;
-            text-align: center;
+            text-align: left; /* Căn chữ sang trái */
             cursor: pointer;
             transition: var(--card-transition);
             font-family: var(--qa-answer-font);
             color: var(--text-color); /* Giống với qa-section content */
+            font-weight: bold; /* Kiểu chữ đậm */
         }
 
         .learning-item:hover {
