--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         }
 
         .recognition-section h2 {
-            color: #ffffff; /* Màu trắng */
+            color: var(--dark-color); /* Thay đổi từ #ffffff sang màu đen */
             margin-bottom: 20px;
             font-size: 1.1em; /* Giảm kích thước font */
             text-align: center;
@@ -384,7 +384,7 @@
         .qa-section {
             width: 100%;
             max-width: 800px;
-            background-color: var(--white-bg); /* Đã thay đổi để giống phần nhận diện biển báo */
+            background-color: var(--white-bg); /* Nền trắng */
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             padding: 20px;
@@ -566,6 +566,62 @@
             justify-content: center;
         }
 
+        /* Phần 3: Tìm hiểu */
+        .learning-section {
+            width: 100%;
+            max-width: 800px;
+            background-color: var(--white-bg); /* Nền trắng */
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            padding: 20px;
+            margin-bottom: 30px;
+        }
+
+        .learning-section h2 {
+            color: var(--dark-color); /* Thay đổi thành màu đen */
+            margin-bottom: 20px;
+            font-size: 1.1em; /* Giảm kích thước font chữ */
+            text-align: center;
+            font-family: var(--qa-question-font);
+            font-weight: normal; /* Không in đậm */
+        }
+
+        .learning-items {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 15px;
+            justify-content: center;
+        }
+
+        .learning-item {
+            background-color: var(--card-bg-color);
+            border: 1px solid var(--card-border-color);
+            border-radius: 8px;
+            padding: 15px;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+            flex: 1 1 calc(50% - 30px); /* Hai mục mỗi dòng, trừ đi khoảng cách */
+            text-align: center;
+            font-size: 1em;
+            color: var(--question-color);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .learning-item:hover {
+            background-color: var(--card-hover-bg);
+            transform: translateY(-5px);
+        }
+
+        .learning-item:focus {
+            outline: 3px solid var(--focus-outline);
+        }
+
+        /* Điều chỉnh cho thiết bị nhỏ */
+        @media (max-width: 600px) {
+            .learning-item {
+                flex: 1 1 100%; /* Một mục mỗi dòng trên thiết bị nhỏ */
+            }
+        }
     </style>
 </head>
 <body>
@@ -575,7 +631,7 @@
         <p id="slogan"></p>
     </div>
 
-    <!-- Phần 2: Nhận Diện Biển Báo Giao Thông (Moved Up) -->
+    <!-- Phần 2: Nhận Diện Biển Báo Giao Thông -->
     <div class="recognition-section">
         <h2 class="section-title">Nhận Diện Biển Báo Giao Thông</h2>
         <div class="video-container">
@@ -785,8 +841,10 @@
                     const panel = this.nextElementSibling;
                     if (panel.classList.contains('show')) {
                         panel.classList.remove('show');
+                        panel.style.maxHeight = null;
                     } else {
                         panel.classList.add('show');
+                        panel.style.maxHeight = panel.scrollHeight + "px";
                     }
                 });
             });
