--- a/index.html
+++ b/index.html
@@ -247,11 +247,6 @@
             display: none; /* Initially hidden */
         }
 
-        #shareButton {
-            background-color: var(--secondary-color);
-            display: none; /* Initially hidden */
-        }
-
         button:hover:not(:disabled) {
             opacity: 0.9;
             transform: scale(1.05);
@@ -629,180 +624,6 @@
                 flex: 1 1 100%; /* Một mục mỗi dòng trên thiết bị nhỏ */
             }
         }
-
-        /* Modal Kiểm Tra Kiến Thức */
-        .quiz-modal {
-            display: none; /* Hidden by default */
-            position: fixed; /* Stay in place */
-            z-index: 1001; /* Sit on top of other modals */
-            left: 0;
-            top: 0;
-            width: 100%; /* Full width */
-            height: 100%; /* Full height */
-            overflow: auto; /* Enable scroll if needed */
-            background-color: var(--modal-bg-color); /* Nền modal đậm hơn */
-        }
-
-        .quiz-modal-content {
-            background-color: var(--modal-content-bg);
-            margin: 5% auto; /* 5% từ trên và giữa */
-            padding: var(--modal-padding);
-            border: 2px solid var(--modal-content-border);
-            width: 90%; /* Có thể điều chỉnh tùy theo kích thước màn hình */
-            max-width: 600px;
-            border-radius: var(--modal-border-radius);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-            position: relative;
-        }
-
-        .quiz-close-button {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-            position: absolute;
-            top: 10px;
-            right: 20px;
-            cursor: pointer;
-        }
-
-        .quiz-close-button:hover,
-        .quiz-close-button:focus {
-            color: #000;
-            text-decoration: none;
-            cursor: pointer;
-        }
-
-        .quiz-modal-content h2 {
-            color: var(--modal-title-color);
-            margin-bottom: 15px;
-            font-size: 1.8em;
-            text-align: center;
-        }
-
-        .quiz-question {
-            margin-bottom: 20px;
-            font-size: 1.1em;
-            font-weight: bold;
-            color: var(--question-color);
-        }
-
-        .quiz-options {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .quiz-options li {
-            margin-bottom: 10px;
-        }
-
-        .quiz-options label {
-            font-weight: normal;
-            color: var(--text-color);
-        }
-
-        .quiz-submit-button {
-            background-color: var(--primary-color);
-            color: #ffffff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 1em;
-            transition: background-color 0.3s ease;
-            display: block;
-            margin: 20px auto 0 auto;
-        }
-
-        .quiz-submit-button:hover {
-            background-color: darken(var(--primary-color), 10%);
-        }
-
-        .quiz-result {
-            text-align: center;
-            font-size: 1.2em;
-            color: var(--primary-color);
-            margin-top: 20px;
-        }
-
-        /* Modal Chia Sẻ */
-        .share-modal {
-            display: none; /* Hidden by default */
-            position: fixed; /* Stay in place */
-            z-index: 1002; /* Sit on top of other modals */
-            left: 0;
-            top: 0;
-            width: 100%; /* Full width */
-            height: 100%; /* Full height */
-            overflow: auto; /* Enable scroll if needed */
-            background-color: var(--modal-bg-color); /* Nền modal đậm hơn */
-        }
-
-        .share-modal-content {
-            background-color: var(--modal-content-bg);
-            margin: 5% auto; /* 5% từ trên và giữa */
-            padding: var(--modal-padding);
-            border: 2px solid var(--modal-content-border);
-            width: 80%; /* Có thể điều chỉnh tùy theo kích thước màn hình */
-            max-width: 500px;
-            border-radius: var(--modal-border-radius);
-            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-            position: relative;
-            text-align: center;
-        }
-
-        .share-close-button {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-            position: absolute;
-            top: 10px;
-            right: 20px;
-            cursor: pointer;
-        }
-
-        .share-close-button:hover,
-        .share-close-button:focus {
-            color: #000;
-            text-decoration: none;
-            cursor: pointer;
-        }
-
-        .share-modal-content h2 {
-            color: var(--modal-title-color);
-            margin-bottom: 15px;
-            font-size: 1.8em;
-            text-align: center;
-        }
-
-        .share-buttons {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 20px;
-        }
-
-        .share-button {
-            background-color: var(--secondary-color);
-            color: #ffffff;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 1em;
-            transition: background-color 0.3s ease;
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-
-        .share-button:hover {
-            background-color: darken(var(--secondary-color), 10%);
-        }
-
-        /* Giao Diện Thân Thiện - Các cải tiến đã được tích hợp trong các phần trên */
-
     </style>
 </head>
 <body>
@@ -827,7 +648,6 @@
             <button id="captureButton" aria-label="Chụp ảnh">Bắt Đầu</button>
             <button id="uploadButton" aria-label="Tải ảnh lên">Tải Ảnh Lên</button>
             <button id="downloadButton" aria-label="Tải ảnh xuống">Tải Ảnh Xuống</button>
-            <button id="shareButton" aria-label="Chia sẻ ảnh">Chia Sẻ</button>
             <button id="readButton" aria-label="Đọc ý nghĩa biển báo">Đọc</button>
             <button id="retakeButton" aria-label="Chụp lại">Chụp Lại</button>
         </div>
@@ -903,40 +723,6 @@
         </div>
     </div>
 
-    <!-- Modal Kiểm Tra Kiến Thức -->
-    <div id="quizModal" class="quiz-modal" aria-hidden="true" role="dialog" aria-labelledby="quizModalTitle" aria-describedby="quizModalDescription">
-        <div class="quiz-modal-content">
-            <span class="quiz-close-button" aria-label="Đóng">&times;</span>
-            <h2 id="quizModalTitle">Kiểm Tra Kiến Thức Giao Thông</h2>
-            <div id="quiz-container">
-                <!-- Nội dung quiz sẽ được thêm vào đây bằng JavaScript -->
-            </div>
-        </div>
-    </div>
-
-    <!-- Modal Chia Sẻ -->
-    <div id="shareModal" class="share-modal" aria-hidden="true" role="dialog" aria-labelledby="shareModalTitle" aria-describedby="shareModalDescription">
-        <div class="share-modal-content">
-            <span class="share-close-button" aria-label="Đóng">&times;</span>
-            <h2 id="shareModalTitle">Chia Sẻ Ảnh Biển Báo</h2>
-            <p>Chọn nền tảng bạn muốn chia sẻ:</p>
-            <div class="share-buttons">
-                <button class="share-button" id="shareFacebook">
-                    <img src="https://www.svgrepo.com/show/353655/facebook.svg" alt="Facebook" width="20" height="20">
-                    Facebook
-                </button>
-                <button class="share-button" id="shareTwitter">
-                    <img src="https://www.svgrepo.com/show/353712/twitter.svg" alt="Twitter" width="20" height="20">
-                    Twitter
-                </button>
-                <button class="share-button" id="shareEmail">
-                    <img src="https://www.svgrepo.com/show/353740/email.svg" alt="Email" width="20" height="20">
-                    Email
-                </button>
-            </div>
-        </div>
-    </div>
-
     <!-- TensorFlow.js -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
 
@@ -948,7 +734,6 @@
         const uploadButton = document.getElementById('uploadButton');
         const uploadInput = document.getElementById('uploadInput'); // Hidden file input
         const downloadButton = document.getElementById('downloadButton');
-        const shareButton = document.getElementById('shareButton');
         const readButton = document.getElementById('readButton');
         const retakeButton = document.getElementById('retakeButton');
         const capturedImage = document.getElementById('capturedImage');
@@ -1160,7 +945,6 @@
                     video.style.opacity = 0;
                     video.style.display = 'none';
                     downloadButton.style.display = 'inline-block';
-                    shareButton.style.display = 'inline-block'; /* Hiển thị nút chia sẻ */
                     retakeButton.style.display = 'inline-block';
                     predictionResult.innerHTML = "";
                     signMeaning.textContent = "";
@@ -1195,29 +979,6 @@
         }
 
         /**
-         * Hàm chia sẻ ảnh
-         */
-        function sharePhoto() {
-            if (!capturedImage.src) {
-                alert("Không có ảnh nào để chia sẻ.");
-                return;
-            }
-
-            if (navigator.share) {
-                navigator.share({
-                    title: 'Biển Báo Giao Thông',
-                    text: 'Xem biển báo giao thông mà tôi đã nhận diện!',
-                    url: capturedImage.src,
-                })
-                .then(() => console.log('Successful share'))
-                .catch((error) => console.log('Error sharing', error));
-            } else {
-                // Fallback nếu trình duyệt không hỗ trợ Web Share API
-                alert("Trình duyệt của bạn không hỗ trợ chức năng chia sẻ trực tiếp. Bạn có thể tải ảnh xuống và chia sẻ thủ công.");
-            }
-        }
-
-        /**
          * Hàm chụp lại ảnh
          */
         function retakePhoto() {
@@ -1226,7 +987,6 @@
             video.style.display = 'block';
             video.style.opacity = 1;
             downloadButton.style.display = 'none';
-            shareButton.style.display = 'none'; /* Ẩn nút chia sẻ */
             readButton.style.display = 'none';
             retakeButton.style.display = 'none';
             quizButton.style.display = 'none';
@@ -1390,14 +1150,7 @@
          * Event listener cho nút làm bài kiểm tra
          */
         quizButton.addEventListener('click', () => {
-            openQuizModal();
-        });
-
-        /**
-         * Event listener cho nút chia sẻ
-         */
-        shareButton.addEventListener('click', () => {
-            openShareModal();
+            window.open('https://sites.google.com/view/tracnghiemgiaothong', '_blank');
         });
 
         /**
@@ -1434,9 +1187,6 @@
         // Thêm sự kiện cho nút "Tải Ảnh Xuống"
         downloadButton.addEventListener('click', downloadPhoto);
 
-        // Event listener cho nút "Chia Sẻ"
-        shareButton.addEventListener('click', sharePhoto);
-
         // Event listener cho nút "Tải Ảnh Lên"
         uploadButton.addEventListener('click', () => {
             uploadInput.click(); // Trigger click on hidden file input
@@ -1454,7 +1204,6 @@
                     video.style.opacity = 0;
                     video.style.display = 'none';
                     downloadButton.style.display = 'inline-block';
-                    shareButton.style.display = 'inline-block'; /* Hiển thị nút chia sẻ */
                     retakeButton.style.display = 'inline-block';
                     predictionResult.innerHTML = "";
                     signMeaning.textContent = "";
@@ -1548,175 +1297,6 @@
                 instructionModal.setAttribute('aria-hidden', 'true');
             }
         });
-
-        /**
-         * Modal Kiểm Tra Kiến Thức
-         */
-        const quizModal = document.getElementById('quizModal');
-        const quizCloseButton = document.querySelector('.quiz-close-button');
-
-        // Mở Modal Kiểm Tra
-        function openQuizModal() {
-            quizModal.style.display = 'block';
-            quizModal.setAttribute('aria-hidden', 'false');
-            loadQuiz();
-        }
-
-        // Đóng Modal Kiểm Tra khi nhấn 'x'
-        quizCloseButton.addEventListener('click', () => {
-            quizModal.style.display = 'none';
-            quizModal.setAttribute('aria-hidden', 'true');
-        });
-
-        // Đóng Modal Kiểm Tra khi nhấn ngoài nội dung modal
-        window.addEventListener('click', (event) => {
-            if (event.target == quizModal) {
-                quizModal.style.display = 'none';
-                quizModal.setAttribute('aria-hidden', 'true');
-            }
-        });
-
-        /**
-         * Chức Năng Kiểm Tra Kiến Thức
-         */
-        const quizData = [
-            {
-                question: "Biển báo nào cấm xe đạp vượt đường?",
-                options: ["Biển P.101", "Biển W.208", "Biển W.205", "Biển P.103"],
-                answer: "Biển P.101"
-            },
-            {
-                question: "Biển báo nào cho biết tuyến đường ưu tiên?",
-                options: ["Biển W.207", "Biển W.205", "Biển W.208", "Biển P.103"],
-                answer: "Biển W.207"
-            },
-            // Thêm câu hỏi theo nhu cầu
-        ];
-
-        let currentQuizIndex = 0;
-        let score = 0;
-
-        function loadQuiz() {
-            currentQuizIndex = 0;
-            score = 0;
-            displayQuizQuestion();
-        }
-
-        function displayQuizQuestion() {
-            const quizContainer = document.getElementById('quiz-container');
-            quizContainer.innerHTML = '';
-
-            if (currentQuizIndex < quizData.length) {
-                const currentQuiz = quizData[currentQuizIndex];
-
-                const questionElement = document.createElement('div');
-                questionElement.classList.add('quiz-question');
-                questionElement.textContent = `Câu ${currentQuizIndex + 1}: ${currentQuiz.question}`;
-
-                const optionsList = document.createElement('ul');
-                optionsList.classList.add('quiz-options');
-
-                currentQuiz.options.forEach(option => {
-                    const optionItem = document.createElement('li');
-
-                    const optionLabel = document.createElement('label');
-                    const optionRadio = document.createElement('input');
-                    optionRadio.type = 'radio';
-                    optionRadio.name = 'quiz-option';
-                    optionRadio.value = option;
-
-                    optionLabel.appendChild(optionRadio);
-                    optionLabel.appendChild(document.createTextNode(option));
-
-                    optionItem.appendChild(optionLabel);
-                    optionsList.appendChild(optionItem);
-                });
-
-                const submitButton = document.createElement('button');
-                submitButton.classList.add('quiz-submit-button');
-                submitButton.textContent = currentQuizIndex === quizData.length - 1 ? "Hoàn Thành" : "Tiếp Theo";
-
-                submitButton.addEventListener('click', () => {
-                    const selectedOption = document.querySelector('input[name="quiz-option"]:checked');
-                    if (!selectedOption) {
-                        alert("Vui lòng chọn một đáp án.");
-                        return;
-                    }
-
-                    if (selectedOption.value === currentQuiz.answer) {
-                        score++;
-                    }
-
-                    currentQuizIndex++;
-                    displayQuizQuestion();
-                });
-
-                quizContainer.appendChild(questionElement);
-                quizContainer.appendChild(optionsList);
-                quizContainer.appendChild(submitButton);
-            } else {
-                // Hiển thị kết quả
-                const resultElement = document.createElement('div');
-                resultElement.classList.add('quiz-result');
-                resultElement.textContent = `Bạn đã trả lời đúng ${score} trên ${quizData.length} câu.`;
-
-                quizContainer.appendChild(resultElement);
-            }
-        }
-
-        /**
-         * Modal Chia Sẻ
-         */
-        const shareModal = document.getElementById('shareModal');
-        const shareCloseButton = document.querySelector('.share-close-button');
-        const shareFacebook = document.getElementById('shareFacebook');
-        const shareTwitter = document.getElementById('shareTwitter');
-        const shareEmail = document.getElementById('shareEmail');
-
-        // Mở Modal Chia Sẻ
-        function openShareModal() {
-            shareModal.style.display = 'block';
-            shareModal.setAttribute('aria-hidden', 'false');
-        }
-
-        // Đóng Modal Chia Sẻ khi nhấn 'x'
-        shareCloseButton.addEventListener('click', () => {
-            shareModal.style.display = 'none';
-            shareModal.setAttribute('aria-hidden', 'true');
-        });
-
-        // Đóng Modal Chia Sẻ khi nhấn ngoài nội dung modal
-        window.addEventListener('click', (event) => {
-            if (event.target == shareModal) {
-                shareModal.style.display = 'none';
-                shareModal.setAttribute('aria-hidden', 'true');
-            }
-        });
-
-        // Chia sẻ qua Facebook
-        shareFacebook.addEventListener('click', () => {
-            const imageUrl = capturedImage.src;
-            const facebookShareUrl = `https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(imageUrl)}`;
-            window.open(facebookShareUrl, '_blank');
-        });
-
-        // Chia sẻ qua Twitter
-        shareTwitter.addEventListener('click', () => {
-            const imageUrl = capturedImage.src;
-            const text = "Xem biển báo giao thông mà tôi đã nhận diện!";
-            const twitterShareUrl = `https://twitter.com/intent/tweet?url=${encodeURIComponent(imageUrl)}&text=${encodeURIComponent(text)}`;
-            window.open(twitterShareUrl, '_blank');
-        });
-
-        // Chia sẻ qua Email
-        shareEmail.addEventListener('click', () => {
-            const imageUrl = capturedImage.src;
-            const subject = "Biển Báo Giao Thông";
-            const body = `Xem biển báo giao thông mà tôi đã nhận diện: ${imageUrl}`;
-            const emailShareUrl = `mailto:?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
-            window.location.href = emailShareUrl;
-        });
-
     </script>
 
 </body>
