--- a/index.html
+++ b/index.html
@@ -1114,7 +1114,7 @@
                             readButton.style.display = 'inline-block';
                             quizButton.style.display = 'inline-block';
                         } else {
-                            signMeaning.textContent = "Ý nghĩa: Không tìm thấy ý nghĩa cho biển báo này.";
+                            signMeaning.textContent = "Ý nghĩa: Đây là một hình ảnh không phải là hình biển báo giao thông. Bạn hãy nhấn vào nút Chụp lại hoặc nút Tải ảnh lên để kiểm tra. Lưu ý để kết quả nhận diện đúng cần đảm bảo chất lượng ảnh chụp rỏ nét, đảm bảo kích thước";
                             readButton.style.display = 'inline-block';
                             quizButton.style.display = 'inline-block';
                         }
